<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_online"
        android:enabled="true"
        android:icon="@drawable/ic_online"
        android:title="@string/online"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/i_empty"
        android:enabled="false"
        android:title="" />
    <item
        android:id="@+id/action_download"
        android:enabled="true"
        android:icon="@drawable/ic_download"
        android:title="@string/download"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/ic_setup"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />
</menu>