<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="ContentDescription">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/clImage"
        app:layout_constraintHeight_percent="0.65"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/clPlayer">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/clMinimize"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/clPoster"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/clInfo">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_down_arrow"
                    android:tint="@color/grey_600"
                    android:id="@+id/ivDown"
                    android:padding="@dimen/itemBetweenMarginMedium"
                    android:layout_margin="@dimen/padding_10"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/clInfo"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_margin="@dimen/itemBetweenMarginMedium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/clPoster"
                app:layout_constraintRight_toLeftOf="@id/clMenu">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="@string/app_name"
                    android:id="@+id/judul"
                    android:singleLine="true"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/itemBetweenMargin"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/name"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    tools:text="@string/app_name"
                    android:id="@+id/name"
                    android:singleLine="true"
                    android:textSize="13sp"
                    android:layout_margin="@dimen/itemBetweenMargin"
                    app:layout_constraintTop_toBottomOf="@id/judul"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:id="@+id/clMenu"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/clInfo"
                app:layout_constraintRight_toRightOf="parent">
                <ImageView
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:src="@drawable/ic_menu"
                    android:tint="@color/grey_600"
                    android:id="@+id/ivMenu"
                    android:padding="@dimen/itemBetweenMarginMedium"
                    android:layout_margin="@dimen/padding_10"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:id="@+id/clActionMinimize"
                    android:visibility="gone"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent">
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:id="@+id/ivPreviousMM"
                        android:layout_margin="@dimen/padding_10"
                        android:src="@drawable/ic_previous"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/ivPlayMM"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:id="@+id/ivPlayMM"
                        android:layout_margin="@dimen/padding_10"
                        android:src="@drawable/ic_play"
                        android:onClick="runPlayer"
                        app:layout_constraintLeft_toRightOf="@id/ivPreviousMM"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/ivNextMM"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:id="@+id/ivNextMM"
                        android:layout_margin="@dimen/padding_10"
                        android:src="@drawable/ic_next"
                        app:layout_constraintLeft_toRightOf="@id/ivPlayMM"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"/>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.github.florent37.shapeofview.shapes.RoundRectView
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:shape_roundRect_borderColor="@color/grey_400"
            app:shape_roundRect_borderWidth="0.5dp"
            app:shape_roundRect_bottomRightRadius="@dimen/itemBetweenMarginMedium"
            app:shape_roundRect_bottomLeftRadius="@dimen/itemBetweenMarginMedium"
            app:shape_roundRect_topRightRadius="@dimen/itemBetweenMarginMedium"
            app:shape_roundRect_topLeftRadius="@dimen/itemBetweenMarginMedium"
            app:layout_constraintTop_toBottomOf="@id/clMinimize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:id="@+id/ivBackground"
                android:src="@drawable/ic_placeholder"
                android:contentDescription="@string/poster" />
        </com.github.florent37.shapeofview.shapes.RoundRectView>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/clPlayer"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintTop_toBottomOf="@id/clImage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clProgress"
            android:layout_margin="@dimen/itemBetweenMarginMedium"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/clAction">
            <com.rey.material.widget.Slider
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:sl_minValue="0"
                app:sl_maxValue="100"
                android:id="@+id/sbProgress"
                app:sl_travelAnimDuration="0"
                app:sl_transformAnimDuration="0"
                app:sl_primaryColor="#FF2AF598"
                app:sl_secondaryColor="@color/grey_400"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timeStart"
                android:text="@string/time_default"
                android:textSize="12sp"
                android:padding="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toBottomOf="@id/sbProgress"
                app:layout_constraintLeft_toLeftOf="@id/sbProgress"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timeEnd"
                android:text="@string/time_default"
                android:textSize="12sp"
                android:padding="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toBottomOf="@id/sbProgress"
                app:layout_constraintRight_toRightOf="@id/sbProgress"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clAction"
            android:layout_margin="@dimen/padding_10"
            app:layout_constraintTop_toBottomOf="@id/clProgress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/clVolume">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/ivStyle"
                android:layout_margin="@dimen/padding_10"
                android:src="@drawable/ic_looping"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ivPrevious"
                app:layout_constraintBottom_toBottomOf="parent" />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/ivPrevious"
                android:layout_margin="@dimen/padding_10"
                android:src="@drawable/ic_previous"
                app:layout_constraintLeft_toRightOf="@id/ivStyle"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ivPlay"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/ivPlay"
                android:layout_margin="@dimen/padding_10"
                android:src="@drawable/ic_play"
                android:onClick="runPlayer"
                app:layout_constraintLeft_toRightOf="@id/ivPrevious"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/ivNext"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/progressMusic"
                android:visibility="gone"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/ivNext"
                android:layout_margin="@dimen/padding_10"
                android:src="@drawable/ic_next"
                app:layout_constraintLeft_toRightOf="@id/ivPlay"
                app:layout_constraintRight_toLeftOf="@id/ivFavorite"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:id="@+id/ivFavorite"
                android:layout_margin="@dimen/padding_10"
                android:src="@drawable/ic_unlike"
                app:layout_constraintLeft_toRightOf="@id/ivNext"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/clVolume"
            android:layout_margin="@dimen/itemBetweenMarginMedium"
            app:layout_constraintTop_toBottomOf="@id/clAction"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivVolumeMin"
                android:src="@drawable/ic_volume_down"
                android:padding="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/sbVolume"/>
            <com.rey.material.widget.Slider
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/sbVolume"
                app:sl_minValue="0"
                app:sl_maxValue="100"
                app:sl_trackSize="1dp"
                app:sl_primaryColor="#FF2AF598"
                app:sl_secondaryColor="@color/grey_400"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@id/ivVolumeMin"
                app:layout_constraintRight_toLeftOf="@id/ivVolumeMax"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ivVolumeMax"
                android:src="@drawable/ic_volume_up"
                android:padding="@dimen/itemBetweenMarginMedium"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@id/sbVolume"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>